# Watchdog

./: .gitignore  CLAUDE.md  README.md  config.json  pyproject.toml
docs/: prd-cli-commands.md  prd-configuration.md  prd-heartbeat-monitoring.md  prd-interactive-menu.md  prd-logging.md  prd-recovery-pipeline.md  prd-state-management.md
scripts/: install_cron.py
src/cli/: check.py  handlers.py  main.py
src/cli/menu/: __init__.py  actions.py  app.py  app.tcss  detail_screen.py  screens.py  state.py  widgets.py
src/config/: config_loader.py  constants.py
src/database/: store.py
src/heartbeat/: reader.py  writer.py
src/logging/: logger.py
src/monitor/: checker.py  models.py
src/pipeline/: recovery_pipeline.py
src/recovery/: cleaner.py  killer.py  restarter.py
tests/: conftest.py  test_checker.py  test_cleaner.py  test_config_loader.py  test_config_save.py  test_cron_toggle.py  test_handlers.py  test_heartbeat_reader.py  test_heartbeat_writer.py  test_killer.py  test_main.py  test_menu_actions.py  test_menu_state.py  test_recovery_pipeline.py  test_restarter.py  test_store.py
