[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watchdog-supervisor"
version = "0.1.0"
description = "Cron-based process supervisor for Gmail league system"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
